Improved formatting on the trivia to prevent components jumping around the view.

--- a/quizproject/static/css/style.css
+++ b/quizproject/static/css/style.css
@@ -7,12 +7,8 @@
 }
 
 .question-text-size {
-    white-space: normal;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    max-width: 100%;
-    align-self: center;
-}
+    font-size: 2em;
+}   
 
 .dynamic-text {
     font-size: 1.5em; 
@@ -20,4 +16,14 @@
 
 .full-height-container {
     min-height : 0vh;
+}
+
+.fixed-height-container {
+    height: 125px; /* Adjust the height as needed */
+    overflow: hidden; /* Hide overflow text */
+    text-overflow: ellipsis; /* Add ellipsis for overflow text */
+    display: flex;
+    align-items: center; /* Center the text vertically */
+    justify-content: center; /* Center the text horizontally */
+    text-align: center; /* Center the text */
 }
